crates/plotnik-tests/tests/02-parser/recovery_incomplete/missing_subtype.txt
Q = (expression/)
------------------ DIAGNOSTICS -------------------
error: `/` must be followed immediately by a subtype
 --> query.ptk:1:17
  |
1 | Q = (expression/)
  |                 ^
